# podcast-agent

./: .gitignore  README.md  main.py  pyproject.toml  run_in_tmux.sh  sessions.sh
podcast_agent/: __init__.py  config.py  downloader.py  llm_client.py  llm_providers.py  main.py  models.py  notifier.py  providers.py  subtitle_checker.py  subtitle_downloader.py  subtitle_translator.py  summarizer.py  transcriber.py  transcription_providers.py  wizard.py
skills/podcast-transcription/: SKILL.md  _meta.json
